; ModuleID = '/home/carl/AnghaBench/exploitdb/shellcodes/netbsd_x86/extr_13473.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/shellcodes/netbsd_x86/extr_13473.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@scode = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [12 x i8] c"length: %d\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main() #0 {
  %1 = alloca i32, align 4
  %2 = alloca void (...)*, align 8
  store i32 0, i32* %1, align 4
  %3 = load i64, i64* @scode, align 8
  %4 = inttoptr i64 %3 to i8*
  %5 = bitcast i8* %4 to void (...)*
  store void (...)* %5, void (...)** %2, align 8
  %6 = load i64, i64* @scode, align 8
  %7 = call i32 @strlen(i64 %6)
  %8 = call i32 @printf(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0), i32 %7)
  %9 = load void (...)*, void (...)** %2, align 8
  call void (...) %9()
  ret i32 0
}

declare dso_local i32 @printf(i8*, i32) #1

declare dso_local i32 @strlen(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
